      input configuration. The forked process is also watching for new
      log files. For file inputs max 1 worker is possible.
    * Added the new parameter "start_position" to Input/File.pm. With this
      parameter it's possible to set where to start to tail the logfile.
      Possible values are "begin" and "end". The file watcher of awesant
      sets this parameter to "begin" if a new file were found.
    * Added awesant-create-cert to create a cert bundle.
    * Fixed a bug with autoflush in File.pm for files to store the last
      byte position of logfiles.

awesant (0.7) released at 2013-02-03

    * Some readability improvements.
    * Added the debian specific directory with its control
      files to to build awesant for debian quickly.

awesant (0.6) released at 2013-01-05

    * Moved a comment some lines below
    * Fixed typos.
    * The last log file position is now written at the end of the pull request.
    * Improved the logging.
    * Added a timeout to accept() for IO::Socket.

awesant (0.5) released at 2012-12-06

    * Added a disconnect message to Output/Socket.pm.
    * Added some benchmarking options to Agent.pm.
    * Fixed "cat pidfile" in the init script.
    * Added the new parameter 'format' for incoming messages.
    * Added a input for tcp sockets.
    * Now process groups are created for inputs that have the parameter 'workers' configured.
    * Kicked option ssl_passwd_cb.

awesant (0.4) released at 2012-11-15

    * Implemented a extended add_field feature.

awesant (0.3) released at 2012-11-14

    * Fixed timestamp formatting.
    * Modified an confusing error message.
    * Some code improvements in Output/Redis.pm.

awesant (0.2) released at 2012-11-11

    * Fixed "Can't call method is_debug" in Output/Screen.pm.
    * Added the feature that multiple types can be set for outputs.
    * Deleted awesant.conf - this file will be build by make.

awesant (0.1) released at 2012-11-08

    * Initial release.